[+] JWT token implementation

--- a/RESTfulAPI/RESTfulAPI/appsettings.json
+++ b/RESTfulAPI/RESTfulAPI/appsettings.json
@@ -27,24 +27,24 @@
   "Development": {
     "AppSettings": {
       "JWTSigningKey": "E!89C1a6-@4ds-436_D-86E7-7&*C32^¬71AC58",
-      "ApplicationAudience": "https://localhost:44347/api/user",
-      "ApplicationIssuer": "https://localhost:44347/Login",
+      "ApplicationAudience": "https://localhost:44350/api/user",
+      "ApplicationIssuer": "https://localhost:44350/api/user/login",
       "PasswordSalt": "NZsP6NnmfBuYeJrrAKNuVQ=="
     }
   },
   "Staging": {
     "AppSettings": {
       "JWTSigningKey": "E!89C1a6-@4ds-436_D-86E7-7&*C32^¬71AC58",
-      "ApplicationAudience": "https://localhost:44347/api/user",
-      "ApplicationIssuer": "https://localhost:44347/Login",
+      "ApplicationAudience": "https://localhost:44350/api/user",
+      "ApplicationIssuer": "https://localhost:44350/api/user/login",
       "PasswordSalt": "NZsP6NnmfBuYeJrrAKNuVQ=="
     }
   },
   "Production": {
     "AppSettings": {
       "JWTSigningKey": "E!89C1a6-@4ds-436_D-86E7-7&*C32^¬71AC58",
-      "ApplicationAudience": "https://localhost:44347/api/user",
-      "ApplicationIssuer": "https://localhost:44347/Login",
+      "ApplicationAudience": "https://localhost:44350/api/user/userdata",
+      "ApplicationIssuer": "https://localhost:44350/api/user/login",
       "PasswordSalt": "NZsP6NnmfBuYeJrrAKNuVQ=="
     }
   }
