[~] appsettings.json update

--- a/RESTfulAPI/RESTfulAPI/appsettings.json
+++ b/RESTfulAPI/RESTfulAPI/appsettings.json
@@ -6,7 +6,7 @@
 {
   "ConnectionStrings": {
     "Development": {
-      "DefaultConnection": "Server=DESKTOP-1LO91CU\\SQLEXPRESS;Database=FTOI;Trusted_Connection=True;MultipleActiveResultSets=true"
+      "DefaultConnection": "Server=DESKTOP-1LO91CU\\SQLEXPRESS;Database=RESTful_JWT;Trusted_Connection=True;MultipleActiveResultSets=true"
     },
     "Staging": {
     },
